...
    
    func presentFinishResults(quiz result: QuizResultsViewModel) {
        let alertModel = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            accessibilityIdentifier: "GameResultsAlert",
            completion: { [weak self] _ in
                guard let self else { return }
                
                self.presenter?.restartGame()
            }
        )
...
